--- a/src/index.css
+++ b/src/index.css
@@ -2,4 +2,11 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  margin-left: calc(100vw - 100%);
+}
+
+.container {
+  text-align: center;
+  width: 400px;
+  margin: auto;
 }
