--- a/src/components/TaskManager/TaskManager.css
+++ b/src/components/TaskManager/TaskManager.css
@@ -9,12 +9,6 @@
     padding: 5px;
 }
 
-.TaskList-Button {
-    height: 30px;
-    background-color: transparent;
-    border: 1px solid darkolivegreen;    
-}
-
 .TaskList-Tasks {
     margin: 15px;
     padding: 15px;
@@ -25,6 +19,7 @@
     margin: 15px;
     padding: 15px;
     line-height: 2rem;
+    word-wrap: break-word;
 }
 
 .TaskList-Task > .TaskList-Button {
