--- a/src/components/TaskManager/TaskManager.css
+++ b/src/components/TaskManager/TaskManager.css
@@ -1,26 +1,21 @@
 .TaskList-Form {
-    margin: 15px;
-    padding: 15px;
-}
+  margin: 15px;
+  padding: 15px; }
 
 .TaskList-Input {
-    height: 30px;
-    border: 1px solid darkolivegreen;
-    padding: 5px;
-}
+  height: 30px;
+  border: 1px solid darkolivegreen;
+  padding: 5px; }
 
 .TaskList-Tasks {
-    margin: 15px 0;
-    padding: 15px;
-    text-align: left;
-}
+  margin: 15px 0;
+  padding: 15px;
+  text-align: left; }
 
-.TaskList-Task {
-    padding: 15px;
-    line-height: 2rem;
-    word-wrap: break-word;
-}
+.TaskList-Tasks .TaskList-Task {
+  padding: 15px;
+  line-height: 2rem;
+  word-wrap: break-word; }
 
-.TaskList-Task > .TaskList-Button {
-    float: right;
-}
+.TaskList-Tasks .TaskList-Task .TaskList-Button {
+  float: right; }
