--- a/src/index.css
+++ b/src/index.css
@@ -1,23 +1,17 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500');
-
+@import url("https://fonts.googleapis.com/css?family=Roboto:300,400,500");
 body {
   margin: 0;
   padding: 0;
   font-family: 'Roboto', sans-serif;
-  margin-left: calc(100vw - 100%);
-}
+  margin-left: calc(100vw - 100%); }
 
-.container {
+body .container {
   text-align: center;
   width: 400px;
-  margin: auto;
-}
+  margin: auto; }
 
 @media (min-width: 320px) and (max-width: 480px) {
   .container {
-    width: 300px;
-  }
+    width: 300px; }
   .Tabs-container {
-    width: 100%;
-  }
-}
+    width: 100%; } }
