--- a/src/components/Task/Task.scss
+++ b/src/components/Task/Task.scss
@@ -2,6 +2,16 @@
         padding: 15px;
         line-height: 2rem;
         word-wrap: break-word;
+
+        .Task-label,
+        .Task-button {
+            display: inline-block;
+        }
+
+        .Task-label {
+            width: 170px;
+            vertical-align: middle;
+        }
         
         .Task-button {
             float: right;
